# cprt_rover_24

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.science  Questions.md  README.md  build.sh  build_science.sh  export.sh  firstTimeInstall.sh  frames_2025-03-31_14.37.29.gv  labels.yaml  local_docker_build.sh  make.sh  requirements.txt  vision.md
.devcontainer/: devcontainer.json
.devcontainer/amd64/: devcontainer.json
.devcontainer/jetson/: devcontainer.json
.devcontainer/windows/: devcontainer.json
.github/workflows/: build-docker.yml  docker-build-science.yml  lint-and-format.yml
docker/: Dockerfile.base  Dockerfile.deploy  Dockerfile.dev  Dockerfile.jetson-base  Dockerfile.science  base_build.sh  build_science.sh  common.sh  deploy.sh  dev_build.sh  local_build.sh  repo_build.sh
raman/: raman_20250428_150508.csv
setup/: cprt_bash_aliases.sh  cprt_bash_rc.sh  enablecan.sh  fastdds_config.xml  firstTimeInstall.sh  install_gstreamer.sh  install_nav_deps.sh  install_ros_humble.sh  restart_all_usb_ports.sh  scienceFirstTimeInstall.sh  setup_science.sh  setup_service.sh  start_rover.sh  start_science.service  start_science.sh  tmux_config.conf  turnOnRaman.sh
setup/science/: setup_science.sh  start_science.service  start_science.sh
src/arm_interface/: package.xml  setup.py
src/arm_interface/arm_interface/: joystickArmController.py  joystickScienceController.py  keyboardArmController.py  keyboardArmPublisher.py  keyboardArmReader.py  trajectoryInterpreter.py  typingController.py
src/arm_interface/launch/: armjoystick.launch.py  armjustjoystick.launch.py  armnojoystick.launch.py  keyboard.launch.py  sciencejoystick.launch.py  talon.launch.py
src/arm_interface_inverse_kin/launch/: joystick_inverse_kin_launch.launch.py
src/arm_interface_inverse_kin/src/: joystickKinArmController.cpp
src/arm_srdf/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_srdf/config/: arm_config.yaml  arm_urdf.ros2_control.xacro  arm_urdf.srdf  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
src/arm_srdf/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  (+2 more)
src/arm_srdf3/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_urdf3/: package.xml  setup.cfg  setup.py
src/camera_controller/: package.xml  setup.py
src/camera_streaming/: CMakeLists.txt  package.xml  setup.py
src/camera_streaming/camera_streaming/: webrct_node.py
src/camera_streaming/config/: webrtc.yaml
src/camera_streaming/gst-plugins/: gstarucomarker.cpp
src/camera_streaming/include/camera_streaming/: webrtc_node.h
src/camera_streaming/src/: webrtc_node.cpp
src/camera_streaming_qt/: CMakeLists.txt
src/camera_streaming_qt/include/camera_streaming_qt/: camera_client.h  mainwindow.h  ros_client.h
src/camera_streaming_qt/include/camera_streaming_qt/models/: preset_model.h  source_model.h
src/camera_streaming_qt/include/camera_streaming_qt/tests/: test_camera_node.h  test_get_camera_node.h
src/camera_streaming_qt/include/camera_streaming_qt/widgets/: capture_image_widget.h  main_widget.h  preset_widget.h  source_widget.h
src/camera_streaming_qt/src/: camera_client.cpp  mainwindow.cpp  ros_client.cpp
src/camera_streaming_qt/src/tests/: test_camera_node.cpp  test_get_camera_node.cpp
src/camera_streaming_qt/src/widgets/: capture_image_widget.cpp  main_widget.cpp  preset_widget.cpp  source_widget.cpp
src/costmap_seeding/: package.xml  setup.cfg  setup.py
src/cprt_costmap_plugins/: CMakeLists.txt  costmap_plugins.xml
src/cprt_gridmap_filters/: CMakeLists.txt  filter_plugins.xml  package.xml
src/cprt_planner_plugins/: CMakeLists.txt  global_planner_plugin.xml
src/description/: CMakeLists.txt  package.xml
src/drive/: package.xml  setup.py
src/drive_cpp/: CMakeLists.txt
src/drive_cpp/include/drive_cpp/: TalonDriveController.hpp  WheelControl.hpp
src/drive_cpp/launch/: drive.launch.py  talonDrive.launch.py
src/drive_cpp/src/: TalonDriveController.cpp  WheelControl.cpp  main.cpp
src/elevation_mapping/: CMakeLists.txt
src/end_effector/: package.xml  setup.py
src/gps/: package.xml  setup.py
src/hardware/: CMakeLists.txt  package.xml
src/hardware/include/: TalonSRXWrapper.hpp
src/hardware/src/: TalonSRXWrapper.cpp  rover_arm.cpp  rover_arm.h
src/interfaces/: CMakeLists.txt  package.xml
src/joystick_control/: CMakeLists.txt  package.xml
src/joystick_control/config/: thrustmaster.yaml
src/joystick_control/include/joystick_control/: ArmIKMode.hpp  ArmManualMode.hpp  ArmPresetMode.hpp  DriveMode.hpp  FlightstickControl.hpp  Mode.hpp  MoveGroupAsyncWrapper.hpp  ScienceMode.hpp  ThrustmasterControl.hpp
src/joystick_control/launch/: controller.launch.py  drive.launch.py
src/joystick_control/src/: ArmDummyMode.cpp  ArmHelpers.cpp  ArmIKMode.cpp  ArmManualMode.cpp  ArmPresetMode.cpp  DriveMode.cpp  FlightstickControl.cpp  MoveGroupAsyncWrapper.cpp  ScienceMode.cpp  ThrustmasterControl.cpp
src/keyboard_publisher/: package.xml
src/localization/: package.xml  setup.py
src/moveit_controller/: CMakeLists.txt  package.xml
src/nav_commanders/: package.xml  setup.py
src/nav_mission_commander/: package.xml  setup.cfg  setup.py
src/navigation/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/node_manager/: package.xml  setup.py
src/object_detections/: package.xml  setup.cfg  setup.py
src/placeholder/: CMakeLists.txt  package.xml
src/ros_phoenix_humble/: CMakeLists.txt
src/rover_srdf/: .setup_assistant  CMakeLists.txt  package.xml
src/science_RasberryPi/: package.xml  setup.cfg  setup.py
src/science_sensors/: package.xml  setup.py
src/servo_pkg/: setup.py
src/tf_keyboard/: .gitignore  package.xml  setup.py  setup.py.bck
src/tf_keyboard/tf_keyboard/: download_model.py  image_splitter.py  keyboard_detector.py  keyboard_solvepnp_node.py  solve_pnp.py  tf2_keyboard.py  tf_keyboard.py
src/typing_controller/: CMakeLists.txt  package.xml
src/typing_publisher/: CMakeLists.txt  package.xml
(+318 files in other folders)
