<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_keyboard</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="51888361+MaybeWilli@users.noreply.github.com">will</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_phoenix</build_depend>
  <build_depend>interfaces</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>python3-setuptools</build_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
